css/bug-filer.css
#carlin-bug-filer {
    position: fixed;
    bottom: -12px;
    right: 0;
    left: 0;
    text-align: left;
    vertical-align: bottom;
    max-height: 0;
    overflow: hidden;
    z-index: 999;
    padding: 16px 0 12px 0;
    transition: max-height 500ms ease-in-out;
}
#carlin-bug-filer.show {
    max-height: 200px;
}
#carlin-bug-filer .tab {
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -28px;
    width: 56px;
    height: 12px;
    background: url('chrome-extension://__MSG_@@extension_id__/images/tab-icon.png') top center no-repeat;
    cursor: pointer;
}
#carlin-bug-filer .background {
    position: absolute;
    top: 12px;
    left: 0;
    right: 0;
    bottom: 0;
    background: #FFF;
    opacity: 0.9;
    box-shadow: 0 2px 6px #000;
}

.carlin-bug-filer-thumbnail {
    position: relative;
    margin: 4px 6px 6px 0;
    bottom: 0;
    width: 24%;
    height: 128px;
    float: right;
    overflow: visible;
    opacity: 0.5;
    text-align: center;
    vertical-align: middle;
    transition: opacity 200ms ease-in-out;
}
.carlin-bug-filer-thumbnail:hover {
    opacity: 1.0;
}
.carlin-bug-filer-thumbnail .border {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border: 8px solid #333;
    opacity: 0.75;
    border-radius: 4px;
}
.carlin-bug-filer-thumbnail .container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: auto;
    overflow: hidden;
    padding: 0;
    margin: 8px;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: cover;
}
.carlin-bug-filer-thumbnail .container img {
    width: 100% !important;
    height: 100% !important;
    opacity: 0 !important;
    padding: 0 !important;
    margin: 0 !important;
}
.carlin-bug-filer-thumbnail .container img.gif {
    opacity: 1.0 !important;
}
.carlin-bug-filer-thumbnail .container video {
    width: 100% !important;
    height: 100% !important;
    padding: 0 !important;
    margin: 0 !important;
}
.carlin-bug-filer-thumbnail .closeButton {
    position: absolute;
    top: 0;
    right: 0;
}
.carlin-bug-filer-thumbnail .recordButton {
    position: absolute;
    right: 24px;
    bottom: 0;
}
.carlin-bug-filer-thumbnail .downloadButton {
    position: absolute;
    right: 0;
    bottom: 0;
}
.carlin-bug-filer-thumbnail button {
    margin: 2px;
    padding: 0;
    width: 20px;
    height: 20px;
    vertical-align: middle;
}
.carlin-bug-filer-thumbnail button img {
    width: 12px !important;
    height: 12px !important;
    opacity: 1 !important;
    padding: 0 !important;
    margin: 0 !important;
    vertical-align: middle !important;
}

.carlin-bug-filer-cursor {
    width: 48px;    /* size of image */
    height: 48px;   /* size of image */
    position: absolute;
    z-index: 888;
    background: url('chrome-extension://__MSG_@@extension_id__/images/cursor.png') center center no-repeat;
    pointer-events: none !important;
}

@media (min-width: 501px) and (max-width: 700px) {
    .carlin-bug-filer-thumbnail {
        width: 32%;
    }
}

@media (min-width: 301px) and (max-width: 500px) {
    .carlin-bug-filer-thumbnail {
        width: 47%;
    }
}

@media (max-width: 300px) {
    .carlin-bug-filer-thumbnail {
        width: 96%;
    }
}

